--- a/.workflow/create_buckect.yml
+++ b/.workflow/create_buckect.yml
@@ -1,4 +1,4 @@
-name: Create AWS S3 Bucket
+name: Create S3 Bucket
 
 on:
   push:
@@ -13,22 +13,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Run Python script
-      run: python your_script.py
+    - name: Create S3 Bucket
+      run: |
+        aws s3api create-bucket --bucket sample_github --region ${{ secrets.AWS_REGION }} --create-bucket-configuration LocationConstraint=${{ secrets.AWS_REGION }}
